--- a/style_projects.css
+++ b/style_projects.css
@@ -28,7 +28,10 @@ body {
 }
 
 main {
-    height: 100vh;
+    /* height: 100vh; */
+    display: flex;
+    justify-content: center;
+
 
 }
 
@@ -37,3 +40,44 @@ footer {
     background-color: black;
 
 }
+
+
+
+
+/* --------------- Project Items --------------- */
+
+div.project_item {
+    margin: 30px;
+    padding: 10px;
+    width: 500px;
+    height: 200px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    /* align-items: center; */
+
+}
+
+div.project_text {
+    height: 50%;
+    color: blue
+}
+
+div.project_image {
+    height: 50%;
+
+}
+
+
+div.project_image img {
+    height: 100%;
+
+    /* width: 100%; */
+    /* object-fit: cover; */
+    /* object-position: center; */
+}
+
+
+
